# faber

./: .credo.exs  .dialyzer_ignore.exs  .gitignore  .tool-versions  CLAUDE.md  LICENSE  Makefile  PRODUCT.md  README.md  mix.exs
.claude/research/: 2026-06-18-development-findings-and-recommendations.md  2026-06-18-elixir-dependency-needs.md  2026-06-18-friction-scoring-calibration.md  2026-06-18-plugin-eval-autoresearch-skill-format.md  2026-06-19-single-binary-distribution.md  2026-06-23-ccrider-as-ingestion-source.md  2026-06-23-codex-ingest-format.md  2026-06-23-ctx-window-and-stack-gating.md  2026-06-23-gepa-reflective-loop-decision.md  2026-06-23-python-parity-headtohead.md  2026-06-24-rac-core-lore-analysis.md  2026-06-25-dogfood-real-history.md  2026-06-25-enaia-mcp-prior-art-for-faber.md  2026-06-25-main-feature-test-coverage-audit.md  2026-06-26-behavioral-eval-trigger-accuracy.md  2026-06-26-cross-agent-ingest-survey.md  2026-06-26-dogfood-real-friction-correction-ledger.md  2026-06-26-sidecar-packaging-single-binary.md  2026-06-26-windsurf-pi-kiro-devin-transcript-formats.md  2026-07-03-deep-audit-features-docs-bugs.md  2026-07-10-just-bash-evaluation.md  2026-07-15-sqlite-vs-ets-persistence.md
.claude/scriptorium/: 2026-06-18-claude-code-transcript-sidechain-structure.md  2026-06-18-faber-elixir-tooling-decisions.md  2026-06-18-reqllm-ownership-change.md  2026-06-19-burrito-elixir-single-binary.md  2026-06-19-genserver-job-crash-isolation.md  2026-06-23-cross-agent-format-normalization-boundary.md  2026-06-23-deterministic-eval-sidesteps-reflective-opt-variance.md  2026-06-24-beam-no-egress-tracing-test.md  2026-06-24-lore-rac-requirements-as-code.md  (+8 more)
.github/: release-drafter.yml
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: ADAPTER_CONTRACT.md  GUIDE.md  TIDEWAVE.md
lib/: faber.ex  faber_web.ex
parity/: compare.py  export.exs
python/: README.md  pyproject.toml
python/faber_eval/: __init__.py  __main__.py  cli.py  matchers.py  optimize.py  scorer.py
python/tests/: test_optimize.py  test_roundtrip.py  test_score.py
test/: faber_test.exs  test_helper.exs
(+263 files in other folders)
